--- a/art/order.html
+++ b/art/order.html
@@ -59,7 +59,7 @@
     <p>After confirming your quote, we’ll send you a secure payment link. Accepted payment methods:</p>
     <ul>
       <li>PayPal, Venmo, Zelle</li>
-      <li>Credit / debit cards</li>
+      <li>Credit / debit cards (via Stripe)</li>
       <li>Other (please contact)</li>
     </ul>
 
