--- a/art/paintings.html
+++ b/art/paintings.html
@@ -101,14 +101,14 @@ oil on canvas, 30x30, 2025
 
 <figure class="painting" 
 data-category="featured" 
-data-title="Go" 
+data-title="Deus Ex Machina" 
 data-medium="oil on canvas" 
 data-size="60x60" 
 data-year="2020" 
 data-full="go-60x60.jpg">
 <img src="go-60x60.jpg" alt="Go Thumbnail">
 <figcaption>
-<strong>Go</strong><br>
+<strong>Deus Ex Machina</strong><br>
 oil on canvas, 60x60, 2020
 </figcaption>
 </figure>
@@ -209,11 +209,11 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Protect Your Work</strong><br>oil on canvas, 30x30, 2016</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Go"
+<figure class="painting" data-category="available" data-title="Deus Ex Machina"
         data-medium="oil on canvas" data-size="60x60" data-year="2020"
         data-full="go-60x60.jpg">
   <img src="go-60x60.jpg" alt="Go Thumbnail">
-  <figcaption><strong>Go</strong><br>oil on canvas, 60x60, 2020</figcaption>
+  <figcaption><strong>Deus Ex Machina</strong><br>oil on canvas, 60x60, 2020</figcaption>
 </figure>
 
 <!--
