--- a/ai/students.html
+++ b/ai/students.html
@@ -46,7 +46,7 @@
     <h1 class="page-title">PhD Students</h1>
 	  <p>
     <div class="article-list">
-      <a href="https://wired.me/technology/ai-revolution-saudi-arabia/" class="article-card">Yaser Al-Onaizan</a>
+      <a href="" class="article-card">Yaser Al-Onaizan</a>
       <a href="" class="article-card">Ishwar Chander</a>
       <a href="https://github.com/sdeneefe" class="article-card">Steve DeNeefe</a>
       <a href="" class="article-card">Qing Dou</a>
