--- a/art/paintings.html
+++ b/art/paintings.html
@@ -1209,7 +1209,7 @@ oil on canvas, 60x60, 2020
     <!-- =========  COMMISSIONED  ========= -->
 
     <section id="commissioned">
-      <h2>Sample Commissioned Works</h2>
+      <h2>Commissioned</h2>
       <div class="gallery">
 
    <figure class="painting" data-category="sold" data-title="Morning Train"
@@ -1240,14 +1240,12 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Mao</strong><br>oil on canvas, 20x40, 2022</figcaption>
 </figure>
 
-<!--
 <figure class="painting" data-category="sold" data-title="Don Lito"
         data-medium="oil on canvas" data-size="30x30" data-year="2025"
         data-full="don-lito-30x30.jpg">
   <img src="don-lito-30x30.jpg" alt="Don Lito Thumbnail">
   <figcaption><strong>Don Lito</strong><br>oil on canvas, 30x30, 2025</figcaption>
 </figure>
--->
 
       </div>
     </section>
