--- a/art/paintings.html
+++ b/art/paintings.html
@@ -868,6 +868,13 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Warren Weaver</strong><br>oil on canvas, 30x30, 2012</figcaption>
 </figure>
 
+<figure class="painting" data-category="available" data-title="In and Out"
+        data-medium="oil on canvas" data-size="30x30" data-year="2017"
+        data-full="in-and-out-30x30.jpg">
+  <img src="in-and-out-30x30.jpg" alt="In and Out Thumbnail">
+  <figcaption><strong>In and Out</strong><br>oil on canvas, 30x30, 2017</figcaption>
+</figure>
+
 <figure class="painting" data-category="available" data-title="Warmly Welcome the Success of the Explosion of Our First H-Bomb 1952!"
         data-medium="oil on canvas" data-size="40x30" data-year="2018"
         data-full="welcome-success-of-first-bomb-40x30.jpg">
