--- a/art/paintings.html
+++ b/art/paintings.html
@@ -1219,35 +1219,35 @@ oil on canvas, 60x60, 2020
       <h2>Commissioned</h2>
       <div class="gallery">
 
-   <figure class="painting" data-category="sold" data-title="Morning Train"
+   <figure class="painting" data-category="commissioned" data-title="Morning Train"
         data-medium="oil on canvas" data-size="36x36" data-year="2014"
         data-full="train-36x36.jpg">
   <img src="train-36x36.jpg" alt="Morning Train Thumbnail">
   <figcaption><strong>Morning Train</strong><br>oil on canvas, 36x36, 2014</figcaption>
 </figure>
 
-<figure class="painting" data-category="sold" data-title="Faded in the Optim"
+<figure class="painting" data-category="commissioned" data-title="Faded in the Optim"
         data-medium="oil on canvas" data-size="40x30" data-year="2021"
         data-full="xavi-40x30.jpg">
   <img src="xavi-40x30.jpg" alt="Faded in the Optim Thumbnail">
   <figcaption><strong>Faded in the Optim</strong><br>oil on canvas, 40x30, 2021</figcaption>
 </figure>
 
-<figure class="painting" data-category="sold" data-title="Quaking Aspen"
+<figure class="painting" data-category="commissioned" data-title="Quaking Aspen"
         data-medium="oil on canvas" data-size="28x22" data-year="2023"
         data-full="quaking-aspen-28x22.jpg">
   <img src="quaking-aspen-28x22.jpg" alt="Quaking Aspen Thumbnail">
   <figcaption><strong>Quaking Aspen</strong><br>oil on canvas, 28x22, 2023</figcaption>
 </figure>
 
-<figure class="painting" data-category="sold" data-title="Mao"
+<figure class="painting" data-category="commissioned" data-title="Mao"
         data-medium="oil on canvas" data-size="20x40" data-year="2022"
         data-full="mao-20x40.jpg">
   <img src="mao-20x40.jpg" alt="Mao Thumbnail">
   <figcaption><strong>Mao</strong><br>oil on canvas, 20x40, 2022</figcaption>
 </figure>
 
-<figure class="painting" data-category="sold" data-title="Don Lito"
+<figure class="painting" data-category="commissioned" data-title="Don Lito"
         data-medium="oil on canvas" data-size="30x30" data-year="2025"
         data-full="don-lito-30x30.jpg">
   <img src="don-lito-30x30.jpg" alt="Don Lito Thumbnail">
@@ -1310,6 +1310,7 @@ oil on canvas, 60x60, 2020
 
     setupLoadMore('available');
     setupLoadMore('sold');
+    setupLoadMore('commissioned');
 
     /* ---------- 2.  Modal viewer (unchanged) ---------- */
     const modal        = document.getElementById('modal');
