--- a/art/paintings.html
+++ b/art/paintings.html
@@ -1247,7 +1247,7 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Don Lito</strong><br>oil on canvas, 30x30, 2025</figcaption>
 </figure>
 
-<figure class="painting" data-category="sold" data-title="Moon Surf"
+<figure class="painting" data-category="commissioned" data-title="Moon Surf"
         data-medium="oil on canvas" data-size="30x30" data-year="2024"
         data-full="moonsurf-30x30.jpg">
   <img src="moonsurf-30x30.jpg" alt="Moon Surf Thumbnail">
