--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
 "capricorn",
 "maybe let's get one and split it?",
 "here's a concept that works",
+"can't take a hint",
+"believes everything you say",
 "picked the wrong precinct",
 "come on, double sixes",
 "the twain shall meet",
@@ -147,7 +149,7 @@
 "looks kinda familiar",
 "has a thesis",
 "sits in the back",
-"gets the number one with onions",
+"will have the #1 with onions",
 "works hard",
 "never won anything before",
 "hasn't seen it but will check it out",
