--- a/likes/index.html
+++ b/likes/index.html
@@ -258,6 +258,9 @@
 <a href="https://en.wikipedia.org/wiki/Jack_Womack" class="nounderline">Jack Womack</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Severance_(TV_series)" class="nounderline">Severance</a><br><br>
 <a href="https://www.yelp.com/biz/cafe-collage-venice" class="nounderline">Cafe Collage in Venice Beach</a><br><br>
+
+<a href="https://en.wikipedia.org/wiki/Lord_of_Light" class="nounderline">Lord of Light</a><br><br>
+
 <a href="https://en.wikipedia.org/wiki/Number_theory" class="nounderline">Number theory</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Licorice_Pizza" class="nounderline">Licorice Pizza</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Blockchain" class="nounderline">Blockchain</a><br><br>
