--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
 "has a thesis",
 "sits in the back",
 "will have the #1 with onions",
+"wait, was it trash day?",
+"just lucky to be here",
+"nice boots",
+"shady's back",
+"stole your lighter",
+"memorized the stupid rules",
 "works hard",
 "never won anything before",
 "hasn't seen it but will check it out",
