--- a/likes/index.html
+++ b/likes/index.html
@@ -164,7 +164,7 @@
 <a href="https://en.wikipedia.org/wiki/21_Guns_(song)" class="nounderline">21 Guns</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Masking_tape" class="nounderline">Masking Tape</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Expectation%E2%80%93maximization_algorithm" class="nounderline">EM Algorithm</a><br><br>
-<a href="https://en.wikipedia.org/wiki/The_Prisoner_(1967_TV_series)" class="nounderline">The Prisoner</a><br><br>
+<a href="https://en.wikipedia.org/wiki/The_Prisoner_(1967_TV_series)" class="nounderline">Why did you resign?</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Timescape" class="nounderline">Timescape by Gregory Benford</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Drivin%27_on_9" class="nounderline">Drivin' on 9</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Benjamin_Tucker" class="nounderline">Instead of a Book</a><br><br>
