--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 "has a thesis",
 "sits in the back",
 "will have the #1 with onions",
-"wait, was today trash day?",
+"was today trash day?",
 "just lucky to be here",
 "nice boots",
 "shady's back",
