--- a/math/articles.html
+++ b/math/articles.html
@@ -22,11 +22,11 @@
 
   <main>
     <div class="article-list">
-      <a href="https://hal.science/hal-04261183v1/document" class="article-card">
+      <a href="https://hal.science/hal-04261183v1" class="article-card">
         Collatz High Cycles Do Not Exist (2023)
       </a>
       
-      <a href="https://hal.science/hal-04080486v1/document" class="article-card">
+      <a href="https://hal.science/hal-04080486v1" class="article-card">
         A Small Collatz Rule without the Plus One (2023)
       </a>
 
