--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
 "brought snacks",
 "listens to reason",
 "is feeling feelings",
-"capricorn",
+"EYE GRN HAIR WHT INTJ CAPR DRGN",
+"the parking brake? this whole time?"
+"underachiever of the year",
 "maybe let's get one and split it?",
 "here's a concept that works",
 "can't take a hint",
