--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 "listens to reason",
 "is feeling feelings",
 "EYE GRN HAIR WHT INTJ CAPR DRGN",
-"the parking brake? this whole time?"
+"the parking brake? this whole time?",
 "underachiever of the year",
 "maybe let's get one and split it?",
 "here's a concept that works",
