--- a/likes/index.html
+++ b/likes/index.html
@@ -295,6 +295,18 @@
 <a href="https://en.wikipedia.org/wiki/Brothers_in_Arms_(album)" class="nounderline">Brothers in Arms by Dire Straits</a><br><br>
 <a href="https://en.wikipedia.org/wiki/The_Fear_(Lily_Allen_song)" class="nounderline">The Fear by Lily Allen</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Spy_(magazine)" class="nounderline">Spy Magazine</a><br><br>
+
+
+<a href="https://shakeshack.com" class="nounderline">Shake Shack Shakes</a><br><br>
+<a href="https://theboilingcrab.com/" class="nounderline">Boiling Crab</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Surf_fishing" class="nounderline">Surf fishing</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Breakfast_by_country" class="nounderline">Japanese breakfast (food)</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Model_Shop_(film)" class="nounderline">Model Shop</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Bash_(Unix_shell)" class="nounderline">Bash programming</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Fawlty_Towers" class="nounderline">Fawlty Towers</a><br><br>
+
+
+
 <a href="https://en.wikipedia.org/wiki/Almost_Famous" class="nounderline">Almost Famous</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Service_Model_(novel)" class="nounderline">Service Model</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Kolmogorov_complexity" class="nounderline">Kolmogorov complexity</a><br><br>
