--- a/likes/index.html
+++ b/likes/index.html
@@ -299,7 +299,7 @@
 
 <a href="https://shakeshack.com" class="nounderline">Shake Shack Shakes</a><br><br>
 <a href="https://theboilingcrab.com/" class="nounderline">Boiling Crab</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Surf_fishing" class="nounderline">Surf fishing</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Surf_fishing" class="nounderline">Surfcasting</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Breakfast_by_country" class="nounderline">Japanese breakfast (food)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Model_Shop_(film)" class="nounderline">Model Shop</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Bash_(Unix_shell)" class="nounderline">Bash programming</a><br><br>
