--- a/art/paintings.html
+++ b/art/paintings.html
@@ -122,6 +122,13 @@ oil on canvas, 60x60, 2020
       <div class="gallery">
 
         
+<figure class="painting" data-category="available" data-title="Espresso"
+        data-medium="oil on canvas" data-size="30x30" data-year="2025"
+        data-full="espresso-30x30.jpg">
+  <img src="espresso-30x30.jpg" alt="Espresso Thumbnail">
+  <figcaption><strong>Espresso</strong><br>oil on canvas, 30x30, 2025</figcaption>
+</figure>
+
   
 <figure class="painting" data-category="available" data-title="Beach"
         data-medium="oil on canvas" data-size="30x30" data-year="2022"
