--- a/art/paintings.html
+++ b/art/paintings.html
@@ -967,7 +967,7 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Los Angeles</strong><br>oil on wood, 42x24, 2023</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Kiss 2"
+<figure class="painting" data-category="sold" data-title="Kiss 2"
         data-medium="oil on canvas" data-size="60x60" data-year="2016"
         data-full="kiss2-60x60.jpg">
   <img src="kiss2-60x60.jpg" alt="Kiss 2 Thumbnail">
