--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 "made in california",
 "nth year",
 "has really done it this time",
-"who's a good boy",
+"who's a good boy?",
 "missed a spot",
 "is grilling some burgers",
 "so i'm free to go?",
