--- a/ciphers/tv.html
+++ b/ciphers/tv.html
@@ -40,7 +40,7 @@
       <a href="https://www.imdb.com/title/tt11345432/?ref_=ttep_ep_4" class="thumb">
           <img src="wilkinson.jpg" alt="Wilkinson Cipher">
       </a>
-      <figcaption>Incredibly, in the early years of the American Republic, the <a href="https://en.wikipedia.org/wiki/James_Wilkinson">head of the Army</a> and governor of the Louisiana Territory was a Spanish spy. In s1e4, we investigated his secret communications and reported our method in this <a href="https://arxiv.org/pdf/2010.04746">paper</a>.</figcaption>   
+      <figcaption>Incredibly, in the early years of the American Republic, the <a href="https://en.wikipedia.org/wiki/James_Wilkinson">head of the Army</a> and governor of the Louisiana Territory was a Spanish spy. In s1e4, we investigated his secret communications and reported our method in <a href="https://aclanthology.org/2020.emnlp-main.471/">this paper</a>.</figcaption>   
         </figure>
 	  
         <figure>
