--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 "nth year",
 "has really done it this time",
 "who's a good boy?",
+"let's go",
 "missed a spot",
 "is grilling some burgers",
 "so i'm free to go?",
