--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 "has a thesis",
 "sits in the back",
 "will have the #1 with onions",
-"was today trash day?",
+"wait, was today trash day?",
 "just lucky to be here",
 "nice boots",
 "shady's back",
