--- a/art/paintings.html
+++ b/art/paintings.html
@@ -174,6 +174,14 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Desert Flight</strong><br>oil on canvas, 30x30, 2012</figcaption>
 </figure>
 
+<figure class="painting" data-category="available" data-title="UFO over Venice, California"
+        data-medium="oil on canvas" data-size="30x30" data-year="2025"
+        data-full="ufo-30x30.jpg">
+  <img src="ufo-30x30.jpg" alt="UFO Thumbnail">
+  <figcaption><strong>UFO over Venice, California</strong><br>oil on canvas, 30x30, 2025</figcaption>
+</figure>
+
+
 <figure class="painting" data-category="available" data-title="I Know"
         data-medium="oil on canvas" data-size="30x30" data-year="2021"
         data-full="doge-30x30.jpg">
