--- a/art/order.html
+++ b/art/order.html
@@ -34,7 +34,14 @@
 
       </thead>
       <tbody>
-        <tr><td style="padding-right: 2em;">30×30, 36x36, 40x30, 36x18, 24x36</td><td>$700</td></tr>
+        <tr><td style="padding-right: 2em;">30×30, 36x36, 40x30, 36x18, 24x36</td><td>
+
+<span class="price-tag">
+  <span class="old">$700</span>
+  <span class="new">$500</span>
+</span>
+	
+	</td></tr>
         <tr><td>48×24, 36x24, 30x40</td><td>$800</td></tr>
         <tr><td>48×30</td><td>$2,000</td></tr>
         <tr><td>40×60, 60x40</td><td>$3,000</td></tr>
