--- a/art/order.html
+++ b/art/order.html
@@ -38,15 +38,29 @@
 
 <span class="price-tag">
   <span class="old">$700</span>
-  <span class="new">$500</span>
+  <span class="new">$495</span>
 </span>
 	
 	</td></tr>
-        <tr><td>48×24, 36x24, 30x40</td><td>$800</td></tr>
+        <tr><td>48×24, 36x24, 30x40</td><td>
+		
+<span class="price-tag">
+  <span class="old">$800</span>
+  <span class="new">$595</span>
+</span>
+	
+	</td></tr>
         <tr><td>48×30</td><td>$2,000</td></tr>
         <tr><td>40×60, 60x40</td><td>$3,000</td></tr>
         <tr><td>60×60</td><td>$5,000</td></tr>
-        <tr><td>Other sizes</td><td>$500</td></tr>
+        <tr><td>Other sizes</td><td>
+		
+<span class="price-tag">
+  <span class="old">$500</span>
+  <span class="new">$395</span>
+</span>
+	
+	</td></tr>
 	<tr><td>Commissioned works</td><td>tbd</td></tr>
       </tbody>
     </table>
