--- a/index.html
+++ b/index.html
@@ -153,6 +153,14 @@
 "will have the #1 with onions",
 "wait, was today trash day?",
 "just lucky to be here",
+"writes in pencil, has potential",
+"your call is important to us",
+"has visited several US states",
+"a hotbed of nonmonetizable activity",
+"press two for english",
+"did you feel that?",
+"what's with these homies dissing my girl?",
+"is prepared for a very small earthquake",
 "nice boots",
 "shady's back",
 "stole your lighter",
