--- a/math/articles.html
+++ b/math/articles.html
@@ -23,11 +23,11 @@
   <main>
     <div class="article-list">
       <a href="https://hal.science/hal-04261183v1" class="article-card">
-        Collatz High Cycles Do Not Exist (2023)
+        Collatz High Cycles Do Not Exist (2023), under review
       </a>
       
       <a href="https://hal.science/hal-04080486v1" class="article-card">
-        A Small Collatz Rule without the Plus One (2023)
+	      A Small Collatz Rule without the Plus One (2023), to appear in <i>Complex Systems</i>
       </a>
 
       <a href="https://oeis.org/A383041" class="article-card">
