--- a/index.html
+++ b/index.html
@@ -161,11 +161,16 @@
 "did you feel that?",
 "what's with these homies dissing my girl?",
 "is prepared for a very small earthquake",
+"no bags to check",
+"let's get small",
+"dreaming is free",
+"nothing a little correction fluid won't fix",
+"page views unknown",
 "nice boots",
 "shady's back",
 "stole your lighter",
 "memorized the stupid rules",
-"works hard",
+"werks hard",
 "never won anything before",
 "hasn't seen it but will check it out",
 "once entertained an entire notion",
