--- a/index-old.html
+++ b/index-old.html
@@ -56,6 +56,9 @@ What's the infamous <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54
 How many <a href="https://youtu.be/Jaa4xTUDfek?feature=shared&t=86">prime numbers</a> are there?
 
 <p>
+Math <a href="https://forum.collatzworld.com">forum</a> started ... check it out if you like this topic.
+
+<p>
 We made a nice site about <A HREF="https://chinesenlp.xyz">Chinese NLP</A>!
 We also co-organized a 
  <a href="http://www.statmt.org/wmt21/triangular-mt-task.html">Russian/Chinese common MT evaluation</a>.  
