--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 "wasn't me",
 "was just wondering about that",
 "can't find the scissors",
-"could swear it was right here",
+"could've sworn it was right here",
+"it's for a project",
 "left the oven on",
 "tap water's fine",
 "is why we can't have nice things",
