--- a/likes/index.html
+++ b/likes/index.html
@@ -310,6 +310,11 @@
 <a href="https://en.wikipedia.org/wiki/Service_Model_(novel)" class="nounderline">Service Model</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Kolmogorov_complexity" class="nounderline">Kolmogorov complexity</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Poor_Things_(film)" class="nounderline">Poor Things</a><br><br>
+
+<a href="https://en.wikipedia.org/wiki/Jam%C3%B3n" class="nounderline">Jamon serrano</a><br><br>
+
+<a href="https://www.arts-et-metiers.net/" class="nounderline>Musee des Arts et Metiers</a><br><br>
+
 <a href="https://en.wikipedia.org/wiki/Mary_Fleener" class="nounderline">Mary Fleener: Life of the Party</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Chromatics_(band)" class="nounderline">Chromatics</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Kiss_Kiss_Bang_Bang" class="nounderline">Kiss Kiss Bang Bang</a><br><br>
