--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 "splits his time between indoors and outdoors",
 "is literally inside of a building right now",
 "wears band shirts",
-"rode an elevator with a celebrity",
+"once rode an elevator with a celebrity",
 "try me",
 "has that dream where he's late for the test",
 "get yours today",
@@ -136,7 +136,7 @@
 "listens to reason",
 "is feeling feelings",
 "EYE GRN HAIR WHT INTJ CAPR DRGN",
-"the parking brake? this whole time?",
+"the parking brake, this whole time",
 "underachiever of the year",
 "maybe let's get one and split it?",
 "here's a concept that works",
@@ -152,8 +152,9 @@
 "looks kinda familiar",
 "has a thesis",
 "sits in the back",
-"will have the #1 with onions",
-"wait, was today trash day?",
+"will have the number one with onions",
+"has no hidden agenda",
+"wait, was today trash day",
 "just lucky to be here",
 "writes in pencil, has potential",
 "your call is important to us",
@@ -161,7 +162,7 @@
 "a hotbed of nonmonetizable activity",
 "press two for english",
 "did you feel that?",
-"what's with these homies dissing my girl?",
+"what's with these homies dissing my girl",
 "is prepared for a very small earthquake",
 "no bags to check",
 "let's get small",
