--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
 "underachiever of the year",
 "maybe let's get one and split it?",
 "here's a concept that works",
+"hi! my name is",
+"make yourself at home",
+"would prefer not to",
 "can't take a hint",
 "believes everything you say",
 "picked the wrong precinct",
