--- a/likes/index.html
+++ b/likes/index.html
@@ -57,7 +57,7 @@
 <a href="https://kevincrawfordknight.github.io/doubled-venice-compressed.mp4" class="nounderline">Venice CA</a><br><br>
 <a href="https://kevincrawfordknight.github.io/extra/news-gabbler.html" class="nounderline">Generative news</a><br><br>
 <a href="https://kevincrawfordknight.github.io/inexplicably.html" class="nounderline">Tongue twisters</a><br><br>
-<a href="https://kevincrawfordknight.github.io" class="nounderline">Random unordered shit</a><br><br>
+<a href="https://kevincrawfordknight.github.io/index-old.html" class="nounderline">Random unordered shit</a><br><br>
 <a href="https://kevincrawfordknight.github.io/pics-cooking.html" class="nounderline">Cooking</a><br><br>
 <a href="https://kevincrawfordknight.github.io/pics-ballona.html" class="nounderline">Ballona lagoon</a><br><br>
 
@@ -313,7 +313,7 @@
 
 <a href="https://en.wikipedia.org/wiki/Jam%C3%B3n" class="nounderline">Jamon serrano</a><br><br>
 
-<a href="https://www.arts-et-metiers.net/" class="nounderline>Musee des Arts et Metiers</a><br><br>
+<a href="https://www.arts-et-metiers.net/" class="nounderline">Musee des Arts et Metiers</a><br><br>
 
 <a href="https://en.wikipedia.org/wiki/Mary_Fleener" class="nounderline">Mary Fleener: Life of the Party</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Chromatics_(band)" class="nounderline">Chromatics</a><br><br>
