--- a/art/paintings.html
+++ b/art/paintings.html
@@ -182,7 +182,7 @@ oil on canvas, 60x60, 2020
 </figure>
 
 
-<figure class="painting" data-category="available" data-title="I Know"
+<figure class="painting" data-category="available" data-title="HODL"
         data-medium="oil on canvas" data-size="30x30" data-year="2021"
         data-full="doge-30x30.jpg">
   <img src="doge-30x30.jpg" alt="I Know Thumbnail">
