--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 "stands corrected",
 "better than expected",
 "wait, what?",
+"has been pre-approved",
+"ubik is everywhere",
 "gets pulled over",
 "has half a brain",
 "no time to explain",
