--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 "wait, what?",
 "has been pre-approved",
 "ubik is everywhere",
+"burn rate nominal",
 "gets pulled over",
 "has half a brain",
 "no time to explain",
