--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 "EYE GRN HAIR WHT INTJ CAPR DRGN",
 "the parking brake, this whole time",
 "underachiever of the year",
-"maybe let's get one and split it?",
+"maybe let's get one and split it",
 "here's a concept that works",
 "hi! my name is",
 "make yourself at home",
@@ -149,7 +149,7 @@
 "can't take a hint",
 "believes everything you say",
 "picked the wrong precinct",
-"come on, double sixes",
+"come on, double sixes!",
 "the twain shall meet",
 "live and let live",
 "how much are we talking about?",
@@ -160,7 +160,7 @@
 "sits in the back",
 "will have the number one with onions",
 "has no hidden agenda",
-"wait, was today trash day",
+"wait, was today trash day?",
 "just lucky to be here",
 "writes in pencil, has potential",
 "your call is important to us",
@@ -174,7 +174,7 @@
 "let's get small",
 "dreaming is free",
 "nothing a little correction fluid won't fix",
-"page views unknown",
+"number of page views unknown",
 "nice boots",
 "shady's back",
 "stole your lighter",
