--- a/likes/index.html
+++ b/likes/index.html
@@ -314,6 +314,7 @@
 <a href="https://en.wikipedia.org/wiki/Jam%C3%B3n" class="nounderline">Jamon serrano</a><br><br>
 
 <a href="https://www.arts-et-metiers.net/" class="nounderline">Musee des Arts et Metiers</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Taj_Mahal_(musician)" class="nounderline">Taj Mahal</a><br><br>
 
 <a href="https://en.wikipedia.org/wiki/Mary_Fleener" class="nounderline">Mary Fleener: Life of the Party</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Chromatics_(band)" class="nounderline">Chromatics</a><br><br>
