--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 "brought snacks",
 "listens to reason",
 "is feeling feelings",
-"EYE GRN HAIR WHT INTJ CAPR DRGN",
+"EYES GRN HAIR WHT PERS INTJ CAPR DRGN",
 "the parking brake, this whole time",
 "underachiever of the year",
 "maybe let's get one and split it",
