--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 "the parking brake, this whole time",
 "underachiever of the year",
 "maybe let's get one and split it",
+"don't tase me, bro",
 "here's a concept that works",
 "hi! my name is",
 "make yourself at home",
