--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
 "is feeling feelings",
 "EYES GRN HAIR WHT PERS INTJ CAPR DRGN",
 "can't find the parking brake", 
+"at tea time, everybody agrees",
+"wysiwyg",
+"pick a card, but don't tell me what it is",
+"maximized expertise to income ratio",
+"a leading producer of schadenfreude",
 "underachiever of the year",
 "maybe let's get one and split it",
 "don't tase me, bro",
