--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 "pick a card, but don't tell me what it is",
 "maximized expertise to income ratio",
 "a leading producer of schadenfreude",
+"it's time to ramble on",
 "underachiever of the year",
 "maybe let's get one and split it",
 "don't tase me, bro",
