--- a/art/paintings.html
+++ b/art/paintings.html
@@ -131,14 +131,6 @@ oil on canvas, 60x60, 2020
         
   
 
-<!--
-<figure class="painting" data-category="available" data-title="Friend"
-        data-medium="oil on canvas" data-size="28x22" data-year="2016"
-        data-full="friend-28x22.jpg">
-  <img src="friend-28x22.jpg" alt="Friend Thumbnail">
-  <figcaption><strong>Friend</strong><br>oil on canvas, 28x22, 2016</figcaption>
-</figure>
--->
 
 <figure class="painting" data-category="available" data-title="Do Good Research"
         data-medium="oil on canvas" data-size="36x24" data-year="2013"
@@ -184,15 +176,6 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Automaton</strong><br>oil on canvas, 20x30, 2013</figcaption>
 </figure>
 
-<!--
-<figure class="painting" data-category="available" data-title="Aztecs"
-        data-medium="oil on canvas" data-size="30x40" data-year="2017"
-        data-full="aztecs-30x40.jpg">
-  <img src="aztecs-30x40.jpg" alt="Aztecs Thumbnail">
-  <figcaption><strong>Aztecs</strong><br>oil on canvas, 30x40, 2017</figcaption>
-</figure>
--->
-
 <figure class="painting" data-category="available" data-title="Woman with Bike"
         data-medium="oil on canvas" data-size="30x30" data-year="2014"
         data-full="woman-with-bike-30x30.jpg">
@@ -207,22 +190,12 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Keep Calm</strong><br>oil on wood, 14x11, 2021</figcaption>
 </figure>
 
-<!--
 <figure class="painting" data-category="available" data-title="Selfie 2"
         data-medium="oil on canvas" data-size="30x30" data-year="2025"
         data-full="selfie2-30x30.jpg">
   <img src="selfie2-30x30.jpg" alt="Selfie 2 Thumbnail">
   <figcaption><strong>Selfie 2</strong><br>oil on canvas, 30x30, 2025</figcaption>
 </figure>
-
-<!--
-<figure class="painting" data-category="available" data-title="Bad Grammar"
-        data-medium="oil on canvas" data-size="30x30" data-year="2013"
-        data-full="bad-grammar-30x30.jpg">
-  <img src="bad-grammar-30x30.jpg" alt="Bad Grammar Thumbnail">
-  <figcaption><strong>Bad Grammar</strong><br>oil on canvas, 30x30, 2013</figcaption>
-</figure>
--->
 
 <figure class="painting" data-category="available" data-title="Big Brother is Watching You"
         data-medium="oil on canvas" data-size="36x24" data-year="2013"
@@ -287,15 +260,6 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Consistency of Arithmetic</strong><br>oil on canvas, 48x24, 2022</figcaption>
 </figure>
 
-<!--
-<figure class="painting" data-category="available" data-title="Cool Britannia"
-        data-medium="oil on canvas" data-size="40x30" data-year="2019"
-        data-full="cool-britannia-40x30.jpg">
-  <img src="cool-britannia-40x30.jpg" alt="Cool Britannia Thumbnail">
-  <figcaption><strong>Cool Britannia</strong><br>oil on canvas, 40x30, 2019</figcaption>
-</figure>
--->
-
 <figure class="painting" data-category="available" data-title="Co-Prime"
         data-medium="oil on canvas" data-size="36x36" data-year="2022"
         data-full="coprime-36x36.jpg">
@@ -309,15 +273,6 @@ oil on canvas, 60x60, 2020
   <img src="crawford1-28x22.jpg" alt="Crawford 1 Thumbnail">
   <figcaption><strong>Crawford 1</strong><br>oil on canvas, 28x22, 2019</figcaption>
 </figure>
-
-<!--
-<figure class="painting" data-category="available" data-title="Crossword"
-        data-medium="oil on canvas" data-size="30x30" data-year="2016"
-        data-full="crossword-30x30.jpg">
-  <img src="crossword-30x30.jpg" alt="Crossword Thumbnail">
-  <figcaption><strong>Crossword</strong><br>oil on canvas, 30x30, 2016</figcaption>
-</figure>
--->
 
 <figure class="painting" data-category="available" data-title="Day Drinking"
         data-medium="oil/foil on canvas" data-size="30x30" data-year="2022"
@@ -375,15 +330,6 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Carson Hawke</strong><br>oil on wood, 24x20, 2020</figcaption>
 </figure>
 
-<!--
-<figure class="painting" data-category="available" data-title="Energy Drink 1"
-        data-medium="oil on canvas" data-size="36x18" data-year="2014"
-        data-full="energy-drink1-36x18.jpg">
-  <img src="energy-drink1-36x18.jpg" alt="Energy Drink 1 Thumbnail">
-  <figcaption><strong>Energy Drink 1</strong><br>oil on canvas, 36x18, 2014</figcaption>
-</figure>
--->
-
 <figure class="painting" data-category="available" data-title="Energy Drink 2"
         data-medium="oil on canvas" data-size="36x18" data-year="2014"
         data-full="energy-drink2-36x18.jpg">
@@ -397,15 +343,6 @@ oil on canvas, 60x60, 2020
   <img src="eye-in-the-sky-18x36.jpg" alt="Eye in the Sky Thumbnail">
   <figcaption><strong>Eye in the Sky</strong><br>oil on canvas, 18x36, 2012</figcaption>
 </figure>
-
-<!--
-<figure class="painting" data-category="available" data-title="Eyes Like"
-        data-medium="oil on canvas" data-size="22x28" data-year="2014"
-        data-full="eyes-like-22x28.jpg">
-  <img src="eyes-like-22x28.jpg" alt="Eyes Like Thumbnail">
-  <figcaption><strong>Eyes Like</strong><br>oil on canvas, 22x28, 2014</figcaption>
-</figure>
--->
 
 <figure class="painting" data-category="available" data-title="Carry Out Family Planning"
         data-medium="oil on canvas" data-size="40x60" data-year="2014"
@@ -421,15 +358,6 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Family Portrait</strong><br>oil on canvas, 24x20, 2020</figcaption>
 </figure>
 
-<!--
-<figure class="painting" data-category="available" data-title="First Met"
-        data-medium="oil on canvas" data-size="36x36" data-year="2013"
-        data-full="first-met-36x36.jpg">
-  <img src="first-met-36x36.jpg" alt="First Met Thumbnail">
-  <figcaption><strong>First Met</strong><br>oil on canvas, 36x36, 2013</figcaption>
-</figure>
--->
-
 <figure class="painting" data-category="available" data-title="Forward With Fast Speed To Build And Defend USA!"
         data-medium="oil on canvas" data-size="30x40" data-year="2018"
         data-full="forward-with-fast-speed-30x40.jpg">
@@ -443,15 +371,6 @@ oil on canvas, 60x60, 2020
   <img src="haiku-vogler-36x24.jpg" alt="Haiku Vogler Thumbnail">
   <figcaption><strong>Haiku Vogler</strong><br>oil on canvas, 36x24, 2019</figcaption>
 </figure>
-
-<!--
-<figure class="painting" data-category="available" data-title="High Heels"
-        data-medium="oil on canvas" data-size="36x24" data-year="2015"
-        data-full="high-heels-36x24.jpg">
-  <img src="high-heels-36x24.jpg" alt="High Heels Thumbnail">
-  <figcaption><strong>High Heels</strong><br>oil on canvas, 36x24, 2015</figcaption>
-</figure>
--->
 
 <figure class="painting" data-category="available" data-title="Hollywood 1"
         data-medium="oil on canvas" data-size="30x30" data-year="2013"
@@ -480,15 +399,6 @@ oil on canvas, 60x60, 2020
   <img src="its-just-a-v-neck-30x15.jpg" alt="It's Just A V-Neck Thumbnail">
   <figcaption><strong>It's Just A V-Neck</strong><br>oil on canvas, 30x15, 2014</figcaption>
 </figure>
-
-<!--
-<figure class="painting" data-category="available" data-title="Jungle"
-        data-medium="oil on canvas" data-size="30x30" data-year="2024"
-        data-full="jungle-30x30.jpg">
-  <img src="jungle-30x30.jpg" alt="Jungle Thumbnail">
-  <figcaption><strong>Jungle</strong><br>oil on canvas, 30x30, 2024</figcaption>
-</figure>
--->
 
 <figure class="painting" data-category="available" data-title="Kiss 3"
         data-medium="oil on canvas" data-size="36x36" data-year="2014"
@@ -599,15 +509,6 @@ oil on canvas, 60x60, 2020
   <img src="princess-36x36.jpg" alt="Princess Thumbnail">
   <figcaption><strong>Princess</strong><br>oil on canvas, 36x36, 2015</figcaption>
 </figure>
-
-<!--
-<figure class="painting" data-category="available" data-title="Python"
-        data-medium="oil on canvas" data-size="40x30" data-year="2024"
-        data-full="python-40x30.jpg">
-  <img src="python-40x30.jpg" alt="Python Thumbnail">
-  <figcaption><strong>Python</strong><br>oil on canvas, 40x30, 2024</figcaption>
-</figure>
--->
 
 <figure class="painting" data-category="available" data-title="Ramona"
         data-medium="oil on canvas" data-size="30x30" data-year="2012"
@@ -805,15 +706,6 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Warmly Welcome the Success of the Explosion of Our First H-Bomb 1952!</strong><br>oil on canvas, 40x30, 2018</figcaption>
 </figure>
 
-<!--
-<figure class="painting" data-category="available" data-title="Why is My Boyfriend in Miami?"
-        data-medium="oil on canvas" data-size="48x60" data-year="2014"
-        data-full="why-is-my-boyfriend-in-miami-48x60.jpg">
-  <img src="why-is-my-boyfriend-in-miami-48x60.jpg" alt="Why is My Boyfriend in Miami? Thumbnail">
-  <figcaption><strong>Why is my Boyfriend in Miami?</strong><br>oil on canvas, 48x60, 2014</figcaption>
-</figure>
--->
-
 <figure class="painting" data-category="available" data-title="World Internet Service"
         data-medium="oil on canvas" data-size="30x30" data-year="2021"
         data-full="world-internet-service-30x30.jpg">
@@ -922,21 +814,6 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Deus Ex Machina</strong><br>oil on canvas, 60x60, 2020</figcaption>
 </figure>
 
-<!--
-<figure class="painting" data-category="available" data-title="Worry Not Wonder Not"
-        data-medium="oil on canvas" data-size="36x24" data-year="2015"
-        data-full="worry-not-wonder-not-36x24.jpg">
-  <img src="worry-not-wonder-not-36x24.jpg" alt="Worry Not Wonder Not Thumbnail">
-  <figcaption><strong>Worry Not Wonder Not</strong><br>oil on canvas, 36x24, 2015</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Slip"
-        data-medium="oil on canvas" data-size="24x24" data-year="2012"
-        data-full="yes3-24x24.jpg">
-  <img src="yes3-24x24.jpg" alt="Slip Thumbnail">
-  <figcaption><strong>Slip</strong><br>oil on canvas, 24x24, 2012</figcaption>
-</figure>
--->
 
 
         
@@ -998,6 +875,13 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Kiss 2</strong><br>oil on canvas, 60x60, 2016</figcaption>
 </figure>
 
+<figure class="painting" data-category="sold" data-title="Friend"
+        data-medium="oil on canvas" data-size="28x22" data-year="2016"
+        data-full="friend-28x22.jpg">
+  <img src="friend-28x22.jpg" alt="Friend Thumbnail">
+  <figcaption><strong>Friend</strong><br>oil on canvas, 28x22, 2016</figcaption>
+</figure>
+
 <figure class="painting" data-category="sold" data-title="Snow"
         data-medium="oil on canvas" data-size="36x36" data-year="2015"
         data-full="snow-36x36.jpg">
@@ -1054,22 +938,6 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Palm Springs</strong><br>oil on canvas, 28x22, 2020</figcaption>
 </figure>
 
-<!--
-<figure class="painting" data-category="sold" data-title="Festschrift"
-        data-medium="oil on canvas" data-size="12x36" data-year="2013"
-        data-full="enthusiasm2-12x36.jpg">
-  <img src="enthusiasm2-12x36.jpg" alt="Festschrift Thumbnail">
-  <figcaption><strong>Festschrift</strong><br>oil on canvas, 12x36, 2013</figcaption>
-</figure>
-
-<figure class="painting" data-category="sold" data-title="Growin'"
-        data-medium="oil on canvas" data-size="18x18" data-year="2024"
-        data-full="growin-18x18.jpg">
-  <img src="growin-18x18.jpg" alt="Growin' Thumbnail">
-  <figcaption><strong>Growin'</strong><br>oil on canvas, 18x18, 2024</figcaption>
-</figure>
--->
-
 <figure class="painting" data-category="sold" data-title="Hollywood"
         data-medium="oil on canvas" data-size="30x30" data-year="2013"
         data-full="hollywood2-30x30.jpg">
@@ -1111,15 +979,6 @@ oil on canvas, 60x60, 2020
   <img src="mountains-30x30.jpg" alt="Mountains Thumbnail">
   <figcaption><strong>Mountains</strong><br>oil on canvas, 30x30, 2019</figcaption>
 </figure>
-
-<!--
-<figure class="painting" data-category="sold" data-title="Mt. Fuji"
-        data-medium="oil on canvas" data-size="30x30" data-year="2013"
-        data-full="mt-fuji-30x30.jpg">
-  <img src="mt-fuji-30x30.jpg" alt="Mt. Fuji Thumbnail">
-  <figcaption><strong>Mt. Fuji</strong><br>oil on canvas, 30x30, 2013</figcaption>
-</figure>
--->
 
 <figure class="painting" data-category="sold" data-title="I'm Not Crazy Person, I'm Enthusiasm!"
         data-medium="oil on canvas" data-size="36x36" data-year="2013"
@@ -1171,15 +1030,6 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>GSD</strong><br>oil on canvas, 24x36, 2014</figcaption>
 </figure>
 
-<!--
-<figure class="painting" data-category="sold" data-title="Tiger"
-        data-medium="oil on canvas" data-size="12x36" data-year="2014"
-        data-full="tiger-12x36.jpg">
-  <img src="tiger-12x36.jpg" alt="Tiger Thumbnail">
-  <figcaption><strong>Tiger</strong><br>oil on canvas, 12x36, 2014</figcaption>
-</figure>
--->
-
 <figure class="painting" data-category="sold" data-title="Cat"
         data-medium="oil on canvas" data-size="30x30" data-year="2024"
         data-full="tiger-30x30.jpg">
@@ -1201,28 +1051,11 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Use Social Media, Keep Location Services On!</strong><br>oil on canvas, 30x40, 2014</figcaption>
 </figure>
 
-<!--
-<figure class="painting" data-category="sold" data-title="Veni Vidi Vici"
-        data-medium="oil on canvas" data-size="36x36" data-year="2014"
-        data-full="veni-vidi-vici-36x36.jpg">
-  <img src="veni-vidi-vici-36x36.jpg" alt="Veni Vidi Vici Thumbnail">
-  <figcaption><strong>Veni Vidi Vici</strong><br>oil on canvas, 36x36, 2014</figcaption>
-</figure>
--->
-
 <figure class="painting" data-category="sold" data-title="Wolverine"
         data-medium="oil on canvas" data-size="30x30" data-year="2017"
         data-full="wolverine-30x30.jpg">
   <img src="wolverine-30x30.jpg" alt="Wolverine Thumbnail">
   <figcaption><strong>Wolverine</strong><br>oil on canvas, 30x30, 2017</figcaption>
-</figure>
-
-<!--
-<figure class="painting" data-category="sold" data-title="Work Like a Dog"
-        data-medium="oil on canvas" data-size="36x36" data-year="2013"
-        data-full="work-like-a-dog-36x36.jpg">
-  <img src="work-like-a-dog-36x36.jpg" alt="Work Like a Dog Thumbnail">
-  <figcaption><strong>Work Like a Dog</strong><br>oil on canvas, 36x36, 2013</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Faded in the Optim"
